--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "cysignals>=1.12.6",
+    "fpylll>=0.6.4",
     "numpy>=2.4.1",
 ]
